--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/multer": "^1.4.5",
     "ts-node-dev": "^1.1.6",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "sqlite3": "^5.0.2",
