--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "form-data": "^4.0.0",
     "js-cookie": "^2.2.1",
     "next": "10.0.7",
     "react": "17.0.1",
